# authentication-service

./: .flake8  README.md  docker-compose.yml  dockerfile  lint.sh  main.py  pyproject.toml  requirements.txt
app/api/: deps.py
app/api/v1/endpoints/: auth.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  token.py
app/db/: base.py  session.py
app/models/: __init__.py  token.py
app/schemas/: auth.py  token.py
app/services/: user.py
